[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nd_line"
version = "0.2.0"  # This is the only place version should be hard coded
authors = [
  { name="Daniel Marshall", email="dpm42@duke.edu" },
]
description = "Interpolate points on an n-dimensional line by euclidean arc length"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy",
  "scipy"
]

[project.urls]
"Homepage" = "https://github.com/thedannymarsh/nd_line"
"Bug Tracker" = "https://github.com/thedannymarsh/nd_line/issues"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
skip-string-normalization = true

[tool.flynt]
line-length = 120

[tool.docformatter]
wrap-summaries = 0
wrap-descriptions = 0
in-place = true

[tool.mypy]
no_namespace_packages = true
